[package]
name = "ryder-serial"
version = "0.1.0"
authors = ["chaz-kiker <chaz-kiker@lambdastudents.com>"]
edition = "2018"

[dependencies]
serialport = "4.0.1"
ascii = "1.0.0"
tokio = { version = "1", features = ["full"] }
fehler = "1"
eyre = "0.6.5"
futures = "0.3"
log = "0.4.14"
env_logger = "0.8.4"
